--- a/ame_code/tasks.ipynb
+++ b/ame_code/tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9123bd37",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
     "    r_prime = (int.from_bytes(encrypted, 'little') % (q - 1)) + 1\n",
     "    return r_prime\n",
     "\n",
-    "def get_generator(p):\n",
+    "def g_generator(p):\n",
     "    while True:\n",
     "        h = secrets.randbelow(p-3) + 2\n",
     "        g = pow(h, 2, p)\n",
@@ -68,7 +68,7 @@
     "\n",
     "\n",
     "def aEncrypt(p, q, g, m, m_a, pk, sk_a, IV, st):\n",
-    "    # Compute pseudo-random part\n",
+    "    # Generate pseudo-random r' to compute r\n",
     "    r_prime = F(sk_a, IV, st, q)\n",
     "    r = (r_prime + m_a) % q\n",
     "\n",
@@ -88,43 +88,47 @@
     "    if h == 1:\n",
     "        return 0  # g^0 == 1\n",
     "    \n",
-    "    # limit bound to at least 1\n",
+    "    # Limit bound to at least 1\n",
     "    if bound <= 1:\n",
     "        return None\n",
     "\n",
-    "    # n = ceil(sqrt(q))\n",
+    "    # Block size n ≈ sqrt(bound) for BSGS\n",
     "    n = math.isqrt(bound)\n",
     "    if n * n < bound:\n",
     "        n += 1\n",
     "\n",
-    "    # Baby steps: store g^j -> j for j in [0, n-1]\n",
+    "    # Baby-steps: store g^j -> for all j in [0, n-1]\n",
     "    baby = {}\n",
-    "    cur = 1\n",
+    "    current = 1\n",
     "    for j in range(n):\n",
     "        # If collision, keep the smallest j\n",
-    "        if cur not in baby:\n",
-    "            baby[cur] = j\n",
-    "        cur = (cur * g) % p\n",
+    "        if current not in baby:\n",
+    "            baby[current] = j\n",
+    "        current = (current * g) % p\n",
     "\n",
-    "    # Compute g^n and its modular inverse modulo p\n",
+    "    # Compute g^n\n",
     "    g_n = pow(g, n, p)\n",
-    "    # modular inverse of g_n modulo p\n",
+    "    # Modular inverse of g_n modulo p\n",
     "    g_n_inv = pow(g_n, p - 2, p)\n",
     "\n",
-    "    # giant steps: i from 0..ceil(bound/n)-1\n",
+    "    # Giant-steps: look for i, j s.t. x = i * n + j solves g^x = h\n",
     "    gamma = h\n",
-    "    max_i = (bound + n - 1) // n  # ceiling(bound / n)\n",
+    "    max_i = (bound + n - 1) // n  # Compute how many giant steps we need\n",
+    "\n",
     "    for i in range(max_i):\n",
+    "        # Check if current gamma matches any baby table value \n",
     "        if gamma in baby:\n",
-    "            j = baby[gamma]\n",
-    "            x = i * n + j\n",
-    "            if x < bound:\n",
+    "            j = baby[gamma]     # Retrieve corresponding baby-step exponent j\n",
+    "            x = i * n + j       # Reconstruct the full exponent x = i*n + j\n",
+    "            if x < bound:       # Only accept x if it is within the allowed bound\n",
     "                return x\n",
     "            else:\n",
     "                return None\n",
+    "        # Move to next giant step -> multiply gamma by g^-n\n",
     "        gamma = (gamma * g_n_inv) % p\n",
     "\n",
     "    return None\n",
+    "\n",
     "\n",
     "# Anamorphic decryption\n",
     "def aDecrypt(p, g, sk_a, ct, IV, st, q, bound):\n",
@@ -138,6 +142,7 @@
     "    m_a = baby_step_giant_step(p, g, g_m_a, bound)\n",
     "    return m_a\n",
     "\n",
+    "\n",
     "# Standard decryption\n",
     "def Decrypt(p, ct, sk):\n",
     "    s = pow(ct[1], sk, p) # s = g^r^x = y^r\n",
@@ -146,11 +151,11 @@
     "    return cover_msg\n",
     "\n",
     "\n",
-    "# ===== Initialization ===== #\n",
+    "# ===== Parameter initialization ===== #\n",
     "\n",
     "p = 25283138329189278652587895589109525736072750946542698825287111445816073512149787631506175333955884685211183346377467560941062660497423325529940869143458703 \n",
     "q = 12641569164594639326293947794554762868036375473271349412643555722908036756074893815753087666977942342605591673188733780470531330248711662764970434571729351\n",
-    "g = get_generator(p)\n",
+    "g = g_generator(p)\n",
     "\n",
     "pk, sk, sk_a = create_keys(p, q, g)\n",
     "\n",
@@ -165,9 +170,20 @@
    "execution_count": null,
    "id": "3a425fda",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m = 13000, m_a = 200000005\n",
+      "Ciphertext: (1913861343883343165279614105683747021945195540403198509746410286484321452452719416964902110752770525867769768353015993528226601430045082181132350274213853, 16004849847820936426070952803722593183942085963746635600526831786933875850736605476908309196631562944155237871097296556031948759547397099209990429891344214)\n",
+      "cover_m = 13000, secret_m = 200000005\n"
+     ]
+    }
+   ],
    "source": [
-    "# ===== Encryption ===== #\n",
+    "# ===== Int encryption test ===== #\n",
+    "\n",
     "m = 13000\n",
     "m_a = 200000005\n",
     "print(f'm = {m}, m_a = {m_a}')\n",
@@ -176,7 +192,8 @@
     "print(f\"Ciphertext: {ct}\")\n",
     "\n",
     "\n",
-    "# ======== Decryption ======== #\n",
+    "# ===== Int decryption test ===== #\n",
+    "\n",
     "cover_m = Decrypt(p, ct, sk)\n",
     "secret_m = aDecrypt(p, g, sk_a, ct, IV, st, q, bound)\n",
     "print(f'cover_m = {cover_m}, secret_m = {secret_m}')"
@@ -184,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "f38bcd95",
    "metadata": {},
    "outputs": [
@@ -192,14 +209,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ciphertext:  [(4319412768647108297125022400138766908808955433264181762654848229934387700143670202067411280493526865310777346505561596935529816490812704720337221163026982, 24593054705352255624998955886081538713520065383011171210764188342135555365017230103374176441859126831976137989149272056002321581927150966175143045109428051), (19337392467089686003872511895667668570111404910682407438952626563395962082534597252724346682014704297317161616789661216076953514652471761016254832641695343, 3699636245314863754258033399898374300880283907029821125848433428332499887206064986100871083500822675823494723669993335943368286208344865023300095428159946), (14337867020991038512946008714579018726079048076664345429210736143704757788223902618043537272214854442431644624216517839781000171279355187787384617909268059, 10424730637775264723287862534866460509250050841975263051806213752643820148992221227591431990895981408814494670946795868115580452746062804602483950961107680), (15053973291974653686527368356387018857333555646078651866946348028188716908526786778086240294920352914304144244605939277822724430292304834791144377485937973, 4907227993725717705577879166650411768427761657974077258638833716098154824621355311518095969312159395348726256490125627574019906477018636835996833940623765), (19517815926892364778082667749166590535715227502850606489802069115966261698588303625619522861706962740165201758867486000605196639927790812693714547151992877, 12486404146105379931586025165985535561339522668915292585780065457664967900746048884843238736858522919336318046170377293092427744697455946351992848029079778), (671651576156529959043904432836188177541775610054158903418520920599706766837202419528518482061838825246193612401439398023955339033686193284107263000327802, 20537185995750854458383227434359184741389246198119760229336964878965278823305632374882396540739552439248923283606023045009478661265833276467910590158722215)]\n",
+      "Ciphertext:  [(20295020438589246510404717175266614248816082207327169229260959157461671622531895819822012492495430582007819818569682308864916002590391699215961158891473850, 21265265556760049026052493860097893894458533087614878555845307087666329064007627996606936508729950765673470564549018879262899530965229806598208451250006510), (12789187275919634986461611456159756454834351055135444470523279323768639030123749034247996453211413902696802883697575737131350449848445662918225898767206677, 6201156515671953617889311545798760798657634763309888083392716645657319268872955853900235146265514678845010668166210933541529890314410392801561976569709784), (7232464662942471798584878158481261967718991566871828877755436701386005983823913206722833143678360913449763287833806841690942292168826261614759875835175017, 13743579212917463436475711023410329371393891086832458129155409280891065360384407365569110681670072881021573648092386364292357795884529116739706739019970439), (11538373140666289072503569433010650915538794508013544266982685928677574057135560678874022845190325379132499422914612476748128483015349958192412488151305453, 7795878858581988411143180548993666448100621773253681315356889913642060261152222831892022312286188479432955320996902197486017353915651743242241597329064420), (1752325104841367727738991683083646514911579644943304747766255145758601554740678079127924039580779333840322324318617049492077473942809269807322016243795061, 11761315483312556355398531724130570570447338551877140992643139228371099133983245090859038270996148459341193663961695881682697927793654972753610093233967903), (3343401710823049706701035520518935212254623314558182083431977438313055058403734678441296390680342998770377623918831384405170960965412212520821226649203745, 5207904625561876929823233751666021149145133041789984999186340280620960116391144996837592951283735147168101809050690686863907208702499436230270416267435635)]\n",
       "cover_m: Hi, how are you doing James? \n",
       "secret_m: We attack at dawn, my friend\n"
      ]
     }
    ],
    "source": [
-    "def encrypt_m(m: str, m_a: str):\n",
+    "# ===== Message encryption test ===== #\n",
+    "\n",
+    "def encode_msg(m: str, m_a: str):\n",
+    "    # Convert each word to integers\n",
     "    int_array = [encode_msg_to_int(word) for word in m.split()]\n",
     "    a_int_array = [encode_msg_to_int(word_a) for word_a in m_a.split()]\n",
     "\n",
@@ -213,7 +233,7 @@
     "\n",
     "    return cts, st_local\n",
     "\n",
-    "def decrypt_and_decode(cts, st_start):\n",
+    "def decode_msg(cts, st_start):\n",
     "    decoded_cover = \"\"\n",
     "    decoded_anam = \"\"\n",
     "    st_local = st_start\n",
@@ -227,16 +247,16 @@
     "\n",
     "    return decoded_cover.strip(), decoded_anam.strip()\n",
     "\n",
-    "# ====== Test ====== #\n",
+    "\n",
     "m = \"Hi, how are you doing James?\"\n",
-    "m_a = \"We attack at dawn, my friend\" # Only words <= 6 char-length work\n",
+    "m_a = \"We attack at dawn, my friend\" # Only len(words) <= 6 works\n",
     "\n",
     "# Encode to ciphertext\n",
-    "cts, st_after = encrypt_m(m, m_a)\n",
+    "cts, st_after = encode_msg(m, m_a)\n",
     "print(\"Ciphertext: \", cts)\n",
     "\n",
     "# Decode to text\n",
-    "decoded_m, decoded_m_a = decrypt_and_decode(cts, st)\n",
+    "decoded_m, decoded_m_a = decode_msg(cts, st)\n",
     "print(f'cover_m: {decoded_m} \\nsecret_m: {decoded_m_a}')"
    ]
   },
@@ -251,10 +271,54 @@
     "* Implement static strong prime ✅\n",
     "* Encrypt messages instead of integers ✅\n",
     "* Write down progress + knowledge in Overleaf ✅\n",
-    "* Read paper 🛑\n",
-    "* Implement Paillier 🛑\n",
+    "* Read research paper 🛑\n",
+    "* Add new ElGamal version to PM 🛑\n",
     "* Implement password protection + panic password 🛑\n",
-    "* Final UI + ai chatbot 🛑"
+    "* Final UI + ai chatbot 🛑\n",
+    "* Write full Overleaf paper 🛑"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f735bf6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '--f=/Users/maverick/Library/Jupyter/runtime/kernel-v32788d0436e168ad6d2061bc3fb0a00be6e063992.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m bitsize\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2048\u001b[39m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mlen\u001b[39m(sys\u001b[38;5;241m.\u001b[39margv)\u001b[38;5;241m>\u001b[39m\u001b[38;5;241m1\u001b[39m):\n\u001b[0;32m----> 7\u001b[0m         bitsize\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msys\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margv\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      9\u001b[0m r\u001b[38;5;241m=\u001b[39mlibnum\u001b[38;5;241m.\u001b[39mrandint_bits(bitsize)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRandom: \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m Length: \u001b[39m\u001b[38;5;132;01m%d\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m (r,libnum\u001b[38;5;241m.\u001b[39mlen_in_bits(r)))\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '--f=/Users/maverick/Library/Jupyter/runtime/kernel-v32788d0436e168ad6d2061bc3fb0a00be6e063992.json'"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import libnum\n",
+    "\n",
+    "bitsize=2048\n",
+    "\n",
+    "if (len(sys.argv)>1):\n",
+    "        bitsize=int(sys.argv[1])\n",
+    "\n",
+    "r=libnum.randint_bits(bitsize)\n",
+    "\n",
+    "print (\"Random: %d Length: %d\" % (r,libnum.len_in_bits(r)))\n",
+    "\n",
+    "p=libnum.generate_prime(bitsize)\n",
+    "\n",
+    "print (\"\\nPrime (p): %d. Length: %d bits, Digits: %d\" % (p,libnum.len_in_bits(p), len(str(p)) ))  \n",
+    "\n",
+    "\n",
+    "q=libnum.generate_prime(bitsize)\n",
+    "print (\"\\nPrime (q): %d. Length: %d bits, Digits: %d\" % (q,libnum.len_in_bits(q), len(str(q)) ))\n",
+    "\n",
+    "N=p*q\n",
+    "print (\"\\nPrime (N): %d. Length: %d bits, Digits: %d\" % (N,libnum.len_in_bits(N), len(str(N)) ))"
    ]
   }
  ],
