Updated tasks + structure

--- a/s5_tasks.ipynb
+++ b/s5_tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9123bd37",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "# Anamorphic Encryption - ElGamal Scheme\n",
     "from Crypto.Cipher import AES\n",
     "from Crypto.Random import get_random_bytes\n",
-    "from char_int_elgamal import encode_msg_to_int, decode_msg_to_int\n",
+    "from ame_code.char_int_elgamal import encode_msg_to_int, decode_msg_to_int\n",
     "import secrets\n",
     "import math\n",
     "from itertools import zip_longest"
@@ -375,12 +375,11 @@
     "* Implement static strong prime ✅\n",
     "* Encrypt messages instead of integers ✅\n",
     "* Write down progress + knowledge in Overleaf ✅\n",
-    "* Add p, q primes to paper (write full testing paragraph) 🛑\n",
-    "* Read research paper 🛑\n",
-    "* Add new ElGamal version to PM 🛑\n",
+    "* Add new ElGamal version to PM ✅\n",
+    "* Add p, q primes to paper (write full testing paragraph) ✅\n",
     "* Implement password protection + panic password 🛑\n",
     "* Final UI + ai chatbot 🛑\n",
-    "* Write full Overleaf paper 🛑"
+    "* Write full Overleaf research paper 🛑"
    ]
   }
  ],
